# Helium-prospector

./: .env.example  .gitignore  MVLT_V2.2_ERGEBNISSE.md  README.md  RECHERCHE_ANALYSE.md  RECHERCHE_V1_BACKUP.md
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  AUDIT_PHASE82_FULL.md  BUILD_LOG.md  CLOSER_GUIDE.md  GITHUB_SECRETS.md  MORGEN_WEITER.md  OPERATIONS.md  PHASE7_AUDIT_REPORT.md  PHASE7_BASELINE.md  PHASE82_AUDIT_REPORT.md  PRE_MORTEM.md  PRE_MORTEM_CRAWLER.md  QA_AUDIT.md  SUPABASE_SETUP.md  VERCEL_DEPLOY.md
pipeline/: README.md  pyproject.toml
pipeline/helium_pipeline/: __init__.py  logging_setup.py  main.py  models.py  monitoring.py  settings.py  synthetic.py
pipeline/helium_pipeline/crawlers/: bundesanzeiger.py  handelsregister.py  mock_source.py
pipeline/helium_pipeline/db/: supabase_client.py
pipeline/helium_pipeline/dossier/: generator.py
pipeline/helium_pipeline/scoring/: affinity.py  anti_filters.py  bafin_vermittler.py  bayes.py  insolvency.py  momentum.py  negative_features.py  offeneregister.py  online_presence.py  predecessor_funds.py  reachability.py  serial_entrepreneur.py
pipeline/helium_pipeline/telephony/: phone_finder.py
pipeline/scripts/: affinity_calibration.py  backfill_contact_channels.py  hr_dump.py  import_schema.py  inspect_hr.py
pipeline/tests/: test_affinity.py  test_anti_filters.py  test_block2_filters.py  test_contact_channels.py  test_dossier.py  test_f_pack.py  test_io_module_purefuncs.py  test_momentum.py  test_monitoring.py  test_negative_features.py  test_predecessor_funds.py  test_reachability.py  test_rescore.py  test_scoring.py  test_synthetic.py
shared/: bafin_vermittler.json  db_schema.sql  helium_watch.json  mailbox_clusters.json  predecessor_funds.json
web/: e2e_test.mjs  final_shots.mjs  gold_demo.mjs  package.json  pnpm-lock.yaml  test_login.mjs  (+1 more)
(+42 files in other folders)
