[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helium-pipeline"
version = "0.1.0"
description = "Lead-Generation-Pipeline für Helium-Direktbeteiligung — handelsregister.de Crawl + Bayesian Scoring + Dossier-Generator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "helium-prospector" }]
license = { text = "Proprietary" }

dependencies = [
    # HTTP + parsing
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "tenacity>=8.5.0",

    # Browser automation (handelsregister.de noch via Playwright)
    "playwright>=1.47.0",
    "playwright-stealth>=1.0.6",

    # Bundesanzeiger-Library (Phase 8.2-Hotfix nach BA-API-Change)
    # Liefert get_reports(company_name) → list of Jahresabschlüsse mit
    # Volltext. Captcha-Solving via integriertes ML-Modell.
    "deutschland>=0.4.2",

    # Data validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Logging
    "structlog>=24.4.0",

    # Supabase
    "supabase>=2.7.0",
    "postgrest>=0.16.0",

    # CLI
    "click>=8.1.7",

    # Utilities
    "python-dateutil>=2.9.0",
    "tldextract>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
helium-pipeline = "helium_pipeline.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["helium_pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "RUF", "ASYNC"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
